<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:text="@string/main_header"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnBlogPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_blog_post"
        app:backgroundTint="@color/purple_700"
        android:textColor="@color/white"
        android:letterSpacing="0.1"
        android:layout_marginBottom="100dp"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintBottom_toTopOf="@id/btnSerie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_serie"
        app:backgroundTint="@color/purple_700"
        android:textColor="@color/white"
        android:letterSpacing="0.1"
        android:layout_marginBottom="100dp"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/btnBlogPost"
        app:layout_constraintBottom_toTopOf="@id/btnConcurso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnConcurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_concurso_textos"
        app:backgroundTint="@color/purple_700"
        android:textColor="@color/white"
        android:letterSpacing="0.1"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/btnSerie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>