<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/red_netflix"
        android:text="@string/serie_header"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:paddingHorizontal="16dp"
        android:paddingVertical="14dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSerieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serie_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="16dp"
        android:gravity="center"
        app:drawableBottomCompat="@drawable/ic_down_arrow"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvEpisode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/serie_episode"
        android:textColor="@color/gray_light"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSerieName" />

    <ImageView
        android:id="@+id/imgSerie"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginTop="56dp"
        android:scaleType="centerCrop"
        android:src="@drawable/capa_heartland"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEpisode" />

    <SeekBar
        android:id="@+id/seekBarProgress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:max="100"
        android:progress="50"
        android:progressTint="@color/red_netflix"
        android:thumbTint="@color/red_netflix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSerie"
        app:layout_constraintVertical_bias="0.184" />

    <TextView
        android:id="@+id/tvTimeStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serie_time_start"
        android:textColor="@color/gray_light"
        android:textSize="12sp"
        android:paddingStart="16dp"
        android:paddingTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/seekBarProgress"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTimeEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serie_time_end"
        android:textColor="@color/gray_light"
        android:textSize="12sp"
        android:paddingEnd="16dp"
        android:paddingTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/seekBarProgress"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/llMediaControlsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeStart"
        app:layout_constraintVertical_bias="0.116">

        <ImageView
            android:id="@+id/imgReplay"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_replay"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/imgPlay"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginHorizontal="32dp"
            android:src="@drawable/ic_play_arrow"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/imgSettings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_settings"
            app:tint="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>